# VisualAnimatedFormat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
filestructure/: README.md  aaaaa.txt  outputtest.vtnc  prot2  prototipo - Copia.vtnc  prototipo Updated Copy.vtnc  prototipo.hexpat  prototipo.txt  prototipo.vtnc  prototipo2-incomplet.vtnc  prototipo2-incomplete.vtnc  vtnc.hexproj
src/: lib.cpp  lib.h  vtncrw.cpp  vtncrw.h
vaf/: Cargo.toml
vaf/src/: bitsize.rs  buffer.rs  errors.rs  file_structure.rs  lib.rs  reader.rs  writer.rs
vsf/: Cargo.toml
vsf/src/: bitsize.rs  buffer.rs  errors.rs  file_structure.rs  lib.rs  writer.rs
